2014-02-11  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (desktop-load-locked-desktop): Fix desktop-save-mode.

2013-12-27  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add hl-defined.

2013-11-12  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add diff-hl.

2013-11-06  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el : Disable semantic for python when python is not found.

2013-10-31  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: default use sql-mode for .sql files.

2013-05-27  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (after-init-hook): Add setting for emacs-init-time.

2013-05-08  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (>=): Add js2-mode.

2013-03-21  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("tabbar"): Update tabbar-ruler.el to 0.25

2013-03-20  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el ("ecb"): Fix ecb for cedet-2.0

	* init-misc.el ("tabbar"): Fix tabbar-ruler for emacs-24.3(ucs-insert)

2012-11-06  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Add format-xml.

2012-08-24  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el (fboundp): setq ecb-windows-width to 0.25

2012-07-26  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add mark-multiple.

	* init-basic.el ([f11]): Bind f11 to toggle-fullscreen.

2012-07-23  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (fci-mode): Add fill-column-indicator.el.

2012-07-12  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Disable whitespace-mode in xml.

2012-06-21  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el	(zone-programs): Fix zone.

2012-06-19  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (org-src-fontify-natively): set
	org-src-fontify-natively to t.

	* init-toolbar.el: Add electric-pair-mode menu item.

2012-05-03  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el ([header-line double-mouse-1]): Bind [header-line
	double-mouse-1] to create new buffer.
