@@ -1,6 +1,7 @@
 2014-02-11  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el (desktop-load-locked-desktop): Fix desktop-save-mode.
+	(daemonp): Setting server.
 
 2013-12-27  Meteor Liu  <meteor1113@gmail.com>
 
